Update top image

--- a/index.html
+++ b/index.html
@@ -11,27 +11,49 @@
 </head>
 <body>
     <div class="game-window">
-        <header class="game-header">
+        <header class="game-header">    
             <nav class="game-header-primary">
                 <ul class="nav-menu">
                     <li class="menu-item"><a href="#">Campign</a></li>
-                    <li class="menu-item is-disabled"><a href="#">Co-op</a></li>
+                    <li class="menu-item"><a href="#">Co-op</a></li>
+                    <li class="menu-item"><a href="#">Multiplayer</a></li>
+                    <li class="menu-item"><a href="#">Arcade</a></li>
                     <li class="menu-item is-current">
-                        <a href="#">Multiplayer</a>
+                        <a href="#">Collections</a>
                         <div class="menu-item-current-bounds"></div>
                     </li>
-                    <li class="menu-item"><a href="#">Arcade</a></li>
                     <li class="menu-item"><a href="#">Replays</a></li>
                 </ul>
+
+                <div class="game-add-friend">
+                    <span class="icon-plus"></span>
+                </div>
+
+                <div class="profile-picture">
+                    <img src="assets/dist/images/user-profile.jpeg" alt="">
+
+                    <div class="profile-picture-shadow"></div>
+                    <div class="profile-picture-background"></div>
+                    <div class="profile-picture-inner-glow"></div>
+                    <div class="profile-picture-inner-shadow"></div>
+
+                    <div class="profile-picture-bar-left"></div>
+                    <div class="profile-picture-bar-right"></div>
+                    <div class="profile-picture-bar-down"></div>
+                    <div class="profile-picture-bar-top"></div>
+                </div>
             </nav>
             <nav class="game-header-secondary">
                 <ul class="nav-menu">
-                    <li class="menu-item"><a href="#">Training</a></li>
-                    <li class="menu-item"><a href="#">Versus A.I.</a></li>
-                    <li class="menu-item"><a href="#">Unranked</a></li>
-                    <li class="menu-item"><a href="#">Ranked</a></li>
-                    <li class="menu-item"><a href="#">Tournament</a></li>
-                    <li class="menu-item"><a href="#">Custom</a></li>
+                    <li class="menu-item"><a href="#">Skins</a></li>
+                    <li class="menu-item"><a href="#">Announcers</a></li>
+                    <li class="menu-item"><a href="#">Emoticons</a></li>
+                    <li class="menu-item is-current">
+                        <a href="#">Portraits</a>
+                        <div class="menu-item-current-bounds"></div>
+                    </li>
+                    <li class="menu-item"><a href="#">Decals</a></li>
+                    <li class="menu-item"><a href="#">Animations</a></li>
                 </ul>
             </nav>
         </header>
