Start work on the rest

--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
                 </ul>
             </nav>
         </header>
+        <main class="game-main">
+            <header class="game-main-header">
+                <h1 class="screen-title">Portraits</h1>
+            </header>
+        </main>
     </div>
+
 </body>
 </html>
