--- a/index.html
+++ b/index.html
@@ -61,8 +61,36 @@
             <header class="game-main-header">
                 <h1 class="screen-title">Portraits</h1>
             </header>
+
+            <div class="portrait-box">
+                <div class="portrait-image" style="background-image: url('assets/dist/images/goliath.png')"></div>
+                <div class="portrait-title">
+                    <span>Goliath</span>
+                </div>
+
+                <div class="portrait-box-level-9"></div>
+                <div class="portrait-box-level-8"></div>
+                <div class="portrait-box-level-7"></div>
+                <div class="portrait-box-level-6"></div>
+                <div class="portrait-box-level-5"></div>
+
+                <div class="portrait-box-level-final">
+                    <div class="base"></div>
+                    <div class="top-left"></div>
+                    <div class="top-right"></div>
+                    <div class="bottom-left"></div>
+                    <div class="bottom-right"></div>
+                </div>
+
+                <div class="portrait-box-level-final-under">
+                    <div class="base"></div>
+                    <div class="top-left"></div>
+                    <div class="top-right"></div>
+                    <div class="bottom-left"></div>
+                    <div class="bottom-right"></div>
+                </div>
+            </div>
         </main>
     </div>
-
 </body>
 </html>
